<resources>
    <string name="app_name">sea battle</string>
    <string name="incorrect_location">Incorrect location!</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="ready">Ready</string>
    <string name="wait_until_another_player_joins">Wait until another player joins</string>
    <string name="wait_until_another_player_is_ready">Wait until another player is ready</string>
    <string name="enter_time_bound">Choose the time allotted for the turn:</string>
    <string name="time">Enter time in seconds</string>
    <string name="wrong_time">Wrong time!</string>
    <string name="choose_game_type">Choose game type:</string>
    <string name="type_public">public</string>
    <string name="type_private">private</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="enter_password_1">Enter password:</string>
    <string name="host">Host:</string>
    <string name="time_for_turn">Time for turn: </string>
    <string name="type">Type:</string>
    <string name="secs">secs</string>
    <string name="password_is_blank">Password is blank!</string>
    <string name="server_is_not_available">Server is not available!</string>
    <string name="not_all_ships_are_arranged">Not all ships are arranged!</string>
    <string name="your_field">Your field:</string>
    <string name="enter_name">Enter name</string>
    <string name="name_can_contain_letters_numbers_and_underscores">Name can contain letters, numbers and underscores</string>
    <string name="password_can_contain_only_letters_numbers_and_underscores">Password can contain only letters, numbers and underscores!</string>
    <string name="name">Name</string>
    <string name="change">Change</string>
    <string name="your_name">Your name:</string>
    <string name="rules">Rules</string>
    <string name="create_game">Create game</string>
    <string name="join_game">Join game</string>
    <string name="settings">Settings</string>
    <string name="you_have_won">You\'ve won!</string>
    <string name="you_have_lost">You\'ve lost!</string>
    <string name="enemy_field">Enemy\'s field:</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play again</string>
    <string name="do_you_really_want_to_exit">Do you really want to exit?</string>
    <string name="another_player_left_the_game">Another player left the game</string>
    <string name="apply">Apply</string>
    <string name="connection_error">Connection error!</string>
    <string name="another_player_exited">Another player exited</string>
    <string name="another_player_want_to_play_again">Another player want to play again</string>
    <string name="play">Play</string>
    <string name="name_is_blank">Name is blank!</string>
    <string name="name_can_contain_only_letters_numbers_and_underscores">Name can contain only letters, numbers and underscores</string>
    <string-array name="coords">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
    </string-array>
    <string name="this_field_cannot_be_blank">This field cannot be blank!</string>
    <string name="the_time_must_be_less_than">The time must be less than</string>
    <string name="minimum_value_is_10">Minimum value is 10!</string>
    <string name="field">Field</string>
    <string name="field_description">The playing field is a 10×10 square for each player, on which a fleet of ships is placed. The verticals are numbered from top to bottom and the horizontals are marked with letters from left to right.</string>
    <string name="number_and_placement_of_ships">Number and placement of ships</string>
    <string name="number_and_placement_of_ships_description">There is a certain layout of ships on the playing field. The ship consists of several decks or pipes (hence the name, for example, \"two-deck\" or \"two-pipe\"). On the playing field are:\n\t\t\t1 four-deck, ship, battleship, - a row of four cells;\n\t\t\t2 three-deck, cruisers, - rows of 3 cells;\n\t\t\t3 double-deck, destroyers, - rows of 2 cells;\n\t\t\t4 single-deck ships, torpedo boats, - 1 cell.\nWhen placing ships, they cannot touch each other with sides and corners.</string>
    <string name="game_progress">Game progress</string>
    <string name="game_progress_description">The instruction defines the conditions and sequence of moves:\n\t\t\t1. Initially, it is randomly chosen, who goes first.\n\t\t\t2. By taking the \"shot\", the player clicks on an enemy cell of the field.\n\t\t\t3. A cross is then placed in the cell; if hit, the cell is also painted over.\n\t\t\t4. If you miss, the right to move passes to another player; if you hit, the player turns again.\n\t\t\t5. A ship is considered sunk when all its cells are painted over. The winner is the one who first sinks all the ships of his opponent.</string>
    <string name="timing">Timing</string>
    <string name="timing_description">There is a time limit for each turn. The remaining time is shown by a red (green) line around the field.</string>
    <string name="time_left_result">If you do not make your turn in the allotted time, you automatically lose.</string>
    <string name="if_anything_remains_unclear">If anything remains unclear, here is link to more detailed rules:</string>
    <string name="rules_link"><u>https://en.wikipedia.org/wiki/Battleship_(game)</u></string>
</resources>